➕ added links in footerbanner

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,21 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif; 
   }
+
+
+  /* Scrollbar Styling */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #000;
+  /* -webkit-border-radius: 10px; */
+  /* border-radius: 10px; */
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #3e3e3e; 
+}
